--- a/lang_translation.ipynb
+++ b/lang_translation.ipynb
@@ -13,7 +13,11 @@
    "id": "bc1afba0",
    "metadata": {},
    "source": [
-    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, i translated the trial datasets, which consist of nine(9) .docx file into english, while i know this does not partend to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document. This deeper comprehension helped me appreciate the structure, language, and goals of the specification and documentation process, which in turn informed my approach to the actual challenge."
+    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, i translated the trial datasets, which consist of nine(9) .docx file into english. \n",
+    "\n",
+    "### While i know this does not partend to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document.\n",
+    " \n",
+    "### This deeper comprehension helped me appreciate the structure, language, and goals of the specification and documentation process, which in turn informed my approach to the actual challenge."
    ]
   },
   {
