--- a/lang_translation.ipynb
+++ b/lang_translation.ipynb
@@ -13,11 +13,10 @@
    "id": "bc1afba0",
    "metadata": {},
    "source": [
-    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, i translated the trial datasets, which consist of nine(9) .docx file into english. \n",
+    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, the trial datasets, which consist of nine(9) .docx files, were translated into English. \n",
     "\n",
-    "### While i know this does not partend to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document.\n",
+    "### While I know this does not pertain to the task given, I just did this to grasp the larger context of the project and found it to be a valuable step in grasping the intent behind each document.\n",
     " \n",
-    "### This deeper comprehension helped me appreciate the structure, language, and goals of the specification and documentation process, which in turn informed my approach to the actual challenge."
    ]
   },
   {
