--- a/lang_translation.ipynb
+++ b/lang_translation.ipynb
@@ -13,10 +13,10 @@
    "id": "bc1afba0",
    "metadata": {},
    "source": [
-    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, the trial datasets, which consist of nine(9) .docx files, were translated into English. \n",
+    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, the trial datasets, which consist of nine(9) .docx file were translated into english. \n",
     "\n",
-    "### While I know this does not pertain to the task given, I just did this to grasp the larger context of the project and found it to be a valuable step in grasping the intent behind each document.\n",
-    " \n",
+    "### While i know this does not pertain  to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document.\n",
+    " "
    ]
   },
   {
