--- a/lang_translation.ipynb
+++ b/lang_translation.ipynb
@@ -5,7 +5,7 @@
    "id": "f0bbaff8",
    "metadata": {},
    "source": [
-    "## This notebook contain work for the ecoSPECS challenge at European Summer of Code 2025. "
+    "### This notebook contain work for the ecoSPECS challenge at European Summer of Code 2025. "
    ]
   },
   {
@@ -13,9 +13,9 @@
    "id": "bc1afba0",
    "metadata": {},
    "source": [
-    "### Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, the trial datasets, which consist of nine(9) .docx file were translated into english. \n",
+    "*** Making use of an NLP Model, MarianMTModel from the HuggingFace model hub, the trial datasets, which consist of nine(9) .docx file were translated into english. \n",
     "\n",
-    "### While i know this does not pertain  to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document.\n",
+    "*** While i know this does not pertain  to the task given, i just did this in other to grasp the larger context of what the project is and also found it to be a valuable step in grasping the intent behind each document.\n",
     " "
    ]
   },
