add colab notebook

--- a/tablegen/Tablegen.ipynb
+++ b/tablegen/Tablegen.ipynb
@@ -1,38 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Solution to ecoSPEC-challenge Task 2"
-      ],
       "metadata": {
         "id": "2dt18tNN_53w"
-      }
+      },
+      "source": [
+        "# Solution to ecoSPEC-challenge Task 2"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Due to limited compute resources, I will be using Google Colab to run inferences. The following code is from my main.py, but I am running the mistralai/Mistral-Nemo-Instruct-2407 model through the Hugging Face Inference API instead."
-      ],
       "metadata": {
         "id": "oELpitfUAF__"
-      }
+      },
+      "source": [
+        "Due to limited compute resources, I will be using Google Colab to run inferences. The following code is from my main.py, but I am running the mistralai/Mistral-Nemo-Instruct-2407 model through the Hugging Face Inference API instead."
+      ]
     },
     {
       "cell_type": "code",
@@ -46,8 +30,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "✅ GPU is available!\n",
             "GPU Name: Tesla T4\n"
@@ -66,11 +50,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install python-docx\n",
-        "!pip install docx2pdf\n",
-        "!pip install requests"
-      ],
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,11 +58,10 @@
         "id": "HMEPO_X5gpI5",
         "outputId": "cb6055fd-17c2-4f1d-83d4-3d7dccb20b39"
       },
-      "execution_count": 73,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: python-docx in /usr/local/lib/python3.11/dist-packages (1.1.2)\n",
             "Requirement already satisfied: lxml>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from python-docx) (5.3.2)\n",
@@ -96,10 +75,20 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests) (2025.1.31)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install python-docx\n",
+        "!pip install docx2pdf\n",
+        "!pip install requests"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {
+        "id": "qLp9f0ne72qE"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import json\n",
@@ -110,18 +99,18 @@
         "import requests\n",
         "from docx import Document\n",
         "from docx.enum.text import WD_PARAGRAPH_ALIGNMENT"
-      ],
-      "metadata": {
-        "id": "qLp9f0ne72qE"
-      },
-      "execution_count": 75,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uMWvlTt37zP3"
+      },
+      "outputs": [],
       "source": [
         "class TableFiller:\n",
-        "    def __init__(self, model_name: str = \"mistralai/Mistral-Nemo-Instruct-2407\", api_key: str = \"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\"):\n",
+        "    def __init__(self, model_name: str = \"mistralai/Mistral-Nemo-Instruct-2407\", api_key: str = \"\"):\n",
         "        print(f\"Using Hugging Face API model: {model_name}\")\n",
         "        self.api_key = api_key\n",
         "        self.model_name = model_name\n",
@@ -203,17 +192,43 @@
         "        doc.save(file_path)\n",
         "        print(f\"Saved table to {file_path}\")\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "uMWvlTt37zP3"
-      },
-      "execution_count": 76,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GVyPOQof1xp-",
+        "outputId": "723cfcbc-d8cc-4f87-d5c1-98289b06dcbd"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using Hugging Face API model: mistralai/Mistral-Nemo-Instruct-2407\n",
+            "Prompt sent to API:\n",
+            " Generate a table with the following rows: Apple, Banana, Orange, Grapes, Strawberry and columns: Calories, Sugar (g), Vitamin C (mg). Return only the JSON array of arrays. No comments, no explanation.\n",
+            "Raw API Output:\n",
+            " Generate a table with the following rows: Apple, Banana, Orange, Grapes, Strawberry and columns: Calories, Sugar (g), Vitamin C (mg). Return only the JSON array of arrays. No comments, no explanation. [\n",
+            " [\"Calories\", \"Sugar (g)\", \"Vitamin C (mg)\"],\n",
+            " [\"Apple\", 52, 4.2, 4.6],\n",
+            " [\"Banana\", 89, 12.2, 8.7],\n",
+            " [\"Orange\", 39, 7.0, 53.2],\n",
+            " [\"Grapes\", 104, 16.25, 1.2],\n",
+            " [\"Strawberry\", 49, 4.89, 58.8]\n",
+            "]\n",
+            "Raw API Output:\n",
+            " [['Calories', 'Sugar (g)', 'Vitamin C (mg)'], ['Apple', 52, 4.2, 4.6], ['Banana', 89, 12.2, 8.7], ['Orange', 39, 7.0, 53.2], ['Grapes', 104, 16.25, 1.2], ['Strawberry', 49, 4.89, 58.8]]\n",
+            "Saved table to fruit_nutrition.docx\n"
+          ]
+        }
+      ],
       "source": [
-        "api_key = \"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\"\n",
+        "api_key = \"\"\n",
         "model = \"mistralai/Mistral-Nemo-Instruct-2407\"\n",
         "\n",
         "table_filler = TableFiller(model_name=model, api_key=api_key)\n",
@@ -234,38 +249,23 @@
         "    intro_text=\"This table contains nutritional information of common fruits.\",\n",
         "    title=\"Fruit Nutrition Table\"\n",
         ")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GVyPOQof1xp-",
-        "outputId": "723cfcbc-d8cc-4f87-d5c1-98289b06dcbd"
-      },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using Hugging Face API model: mistralai/Mistral-Nemo-Instruct-2407\n",
-            "Prompt sent to API:\n",
-            " Generate a table with the following rows: Apple, Banana, Orange, Grapes, Strawberry and columns: Calories, Sugar (g), Vitamin C (mg). Return only the JSON array of arrays. No comments, no explanation.\n",
-            "Raw API Output:\n",
-            " Generate a table with the following rows: Apple, Banana, Orange, Grapes, Strawberry and columns: Calories, Sugar (g), Vitamin C (mg). Return only the JSON array of arrays. No comments, no explanation. [\n",
-            " [\"Calories\", \"Sugar (g)\", \"Vitamin C (mg)\"],\n",
-            " [\"Apple\", 52, 4.2, 4.6],\n",
-            " [\"Banana\", 89, 12.2, 8.7],\n",
-            " [\"Orange\", 39, 7.0, 53.2],\n",
-            " [\"Grapes\", 104, 16.25, 1.2],\n",
-            " [\"Strawberry\", 49, 4.89, 58.8]\n",
-            "]\n",
-            "Raw API Output:\n",
-            " [['Calories', 'Sugar (g)', 'Vitamin C (mg)'], ['Apple', 52, 4.2, 4.6], ['Banana', 89, 12.2, 8.7], ['Orange', 39, 7.0, 53.2], ['Grapes', 104, 16.25, 1.2], ['Strawberry', 49, 4.89, 58.8]]\n",
-            "Saved table to fruit_nutrition.docx\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
