--- a/tablegen/Tablegen.ipynb
+++ b/tablegen/Tablegen.ipynb
@@ -19,6 +19,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Malikbadmus/ecoSPEC-challenge-2025/blob/main/Tablegen.ipynb)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
