add collab notebook

--- a/tablegen/Tablegen.ipynb
+++ b/tablegen/Tablegen.ipynb
@@ -22,7 +22,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Malikbadmus/ecoSPEC-challenge-2025/blob/main/Tablegen.ipynb)\n"
+        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/https://github.com/Malikbadmus/ecoSPEC-challenge-2025/blob/main/tablegen/Tablegen.ipynb)\n"
       ]
     },
     {
